--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -23,10 +23,10 @@ default: &default
 
 development:
   <<: *default
-
+  
   dev_server:
-    host: 0.0.0.0
-    port: 8080
+    host: localhost
+    port: 8090
     https: false
 
 test:
