--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,13 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: uec_transport
+  pool: 5
+  host: localhost
+  port: 5433
+  username: postgres
+  password: thompson
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
