--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rails-erb-loader": "^5.0.2",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
+    "signature_pad": "^2.2.1",
     "style-loader": "^0.18.2",
     "vue": "^2.4.2",
     "vue-loader": "^13.0.2",
